Add Class Configs And Generated Sources