@@ -12,8 +12,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<source>25</source>
-					<target>25</target>
+					<source>26</source>
+					<target>26</target>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -72,8 +75,7 @@
 		</plugins>
 	</build>
 	<properties>
-		<lwjgl.version>3.4.0</lwjgl.version>
-		<joml.version>1.10.8</joml.version>
+		<lwjgl.version>3.3.6</lwjgl.version>
 		<lwjgl.windows.natives>natives-windows</lwjgl.windows.natives>
 		<lwjgl.linux.natives>natives-linux</lwjgl.linux.natives>
 	</properties>
@@ -104,29 +106,10 @@
 			<classifier>${lwjgl.linux.natives}</classifier>
 		</dependency>
 		<dependency>
-			<groupId>org.joml</groupId>
-			<artifactId>joml</artifactId>
-			<version>${joml.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.tinylog</groupId>
-			<artifactId>tinylog-api</artifactId>
-			<version>2.7.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.tinylog</groupId>
-			<artifactId>tinylog-impl</artifactId>
-			<version>2.7.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections-api</artifactId>
-			<version>11.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections</artifactId>
-			<version>11.1.0</version>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs-annotations</artifactId>
+			<version>4.9.8</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
